# resposus

./: CMakeLists.txt  MBU3.dev  MKVP02.dev  arm-none-eabi-gcc.cmake  load.bat  main.c  openocd.cfg
.claude/: settings.local.json
GD_libraries/GD32F10x_standard_peripheral/Include/: gd32f10x_enet.h  gd32f10x_it.h
GD_libraries/GD32F10x_standard_peripheral/Source/: gd32f10x_it.c
GD_libraries/usbd/include/: usbd_hw.h
GD_libraries/usbd/src/: gd32f10x_usbd_hw.c
GD_libraries/usbd/src/usbd_class/: cdc_acm_core.c
Utilities/: GD32F103RCT6.ld  GD32F130C8T6.ld
docs/: passport_v1.5.md  passport_v1.5.txt
include/: FreeRTOSConfig.h
include/DMA/: dma.h
include/EXTI/: EXTI.h
include/I2C/: i2c.h
include/PWM/: PWM.h
include/UART/: UART.h
include/USB/: usb_cdc.h
include/buttons/: buttons.h
include/clock/: tim3_ms.h  tim3_sec.h
include/eeprom/: eeprom.h
include/lcd/: lcd_hd44780.h
include/led/: led.h
include/modbus/: modbus.h  modbus_table.h
include/runtime/: runtime.h  task_modbus.h  task_test_btn.h  task_test_display.h  task_timer.h  task_ui.h  watchdog.h
include/settings/: settings.h
include/ui/: menu.h
lib/CMSIS/DeviceSupport/: gd32f10x.h
lib/GD32F10x_standard_peripheral/Include/: gd32f10x_exmc.h  gd32f10x_rtc.h
lib/GD32F10x_standard_peripheral/Source/: gd32f10x_rtc.c
lib/usbd/include/: usbd_conf.h
lib/usbd/include/usbd_class/: cdc_acm_core.h
src/: main.c
src/DMA/: dma.c
src/EXTI/: EXTI.c
src/I2C/: i2c.c
src/PWM/: PWM.c
src/UART/: UART.c
src/USB/: usb_cdc.c
src/buttons/: buttons.c
src/clock/: systick.c  tim3_ms.c  tim3_sec.c
src/eeprom/: eeprom.c
src/lcd/: lcd_hd44780.c
src/led/: led.c
src/modbus/: modbus.c  modbus_table.c
src/runtime/: runtime.c  task_modbus.c  task_test_btn.c  task_test_display.c  task_timer.c  task_ui.c  watchdog.c
src/settings/: settings.c
src/ui/: menu.c
